# hevy2garmin

./: CHANGELOG.md  pyproject.toml
.github/workflows/: sync.yml
src/hevy2garmin/: merge.py
tests/: test_merge.py  test_surgical_strip.py
universal/: package-lock.json  package.json
universal/src/app/: _layout.tsx  index.tsx
universal/src/app/(main)/: _layout.tsx  history.tsx  settings.tsx  sync.tsx
universal/src/lib/: api.ts
worker/: index.js
